testdata/baselines/reference/conformance/negatedFreshTreatedAsClosedSet.errors.txt
negatedFreshTreatedAsClosedSet.ts(8,4): error TS2345: Argument of type '{ x: number; }' is not assignable to parameter of type 'Distinct<{ x: any; }, { y: any; }>'.
  Type '{ x: number; }' is not assignable to type '{ x: any; } & not ({ x: any; } & { y: any; })'.
    Type '{ x: number; }' is not assignable to type 'not ({ x: any; } & { y: any; })'.
negatedFreshTreatedAsClosedSet.ts(9,4): error TS2345: Argument of type '{ y: number; }' is not assignable to parameter of type 'Distinct<{ x: any; }, { y: any; }>'.
  Type '{ y: number; }' is not assignable to type '{ y: any; } & not ({ x: any; } & { y: any; })'.
    Type '{ y: number; }' is not assignable to type 'not ({ x: any; } & { y: any; })'.
negatedFreshTreatedAsClosedSet.ts(10,4): error TS2345: Argument of type '{ x: number; y: number; }' is not assignable to parameter of type 'Distinct<{ x: any; }, { y: any; }>'.
  Type '{ x: number; y: number; }' is not assignable to type '{ y: any; } & not ({ x: any; } & { y: any; })'.
    Type '{ x: number; y: number; }' is not assignable to type 'not ({ x: any; } & { y: any; })'.


==== negatedFreshTreatedAsClosedSet.ts (3 errors) ====
    // from https://github.com/Microsoft/TypeScript/issues/4183
    type Distinct<A, B> = (A | B) & not (A & B);
    declare var o1: {x: any};
    declare var o2: {y: any};
    
    declare function f1(x: Distinct<typeof o1, typeof o2>): void;
    
    f1({x: 0}); // OK
       ~~~~~~
!!! error TS2345: Argument of type '{ x: number; }' is not assignable to parameter of type 'Distinct<{ x: any; }, { y: any; }>'.
!!! error TS2345:   Type '{ x: number; }' is not assignable to type '{ x: any; } & not ({ x: any; } & { y: any; })'.
!!! error TS2345:     Type '{ x: number; }' is not assignable to type 'not ({ x: any; } & { y: any; })'.
    f1({y: 0}); // OK
       ~~~~~~
!!! error TS2345: Argument of type '{ y: number; }' is not assignable to parameter of type 'Distinct<{ x: any; }, { y: any; }>'.
!!! error TS2345:   Type '{ y: number; }' is not assignable to type '{ y: any; } & not ({ x: any; } & { y: any; })'.
!!! error TS2345:     Type '{ y: number; }' is not assignable to type 'not ({ x: any; } & { y: any; })'.
    f1({x: 0, y: 0}); // Should error
       ~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ x: number; y: number; }' is not assignable to parameter of type 'Distinct<{ x: any; }, { y: any; }>'.
!!! error TS2345:   Type '{ x: number; y: number; }' is not assignable to type '{ y: any; } & not ({ x: any; } & { y: any; })'.
!!! error TS2345:     Type '{ x: number; y: number; }' is not assignable to type 'not ({ x: any; } & { y: any; })'.
    